<resources>
    <string name="app_name">GradeLeaf</string>
    <string name="toolbar_login">Login</string>
    <string name="text_invalid_credentials">Incorrect username or password</string>
    <string name="text_network_error">Aspen temporarily unavailable</string>
    <string name="text_parsing_error">Could not read Aspen data</string>
    <string name="text_no_classes">Nothing here yet&#8230;</string>
    <string name="text_term">Term %1$s</string>
    <string name="text_cumulative_grade">Cumulative grade</string>
    <string name="text_weight">Weight: %1$s</string>
    <string name="text_teacher">Teacher: %1$s %2$s</string>
    <string name="text_schedule">Period: %1$s</string>
    <string name="text_clssrm">Classroom: %1$s</string>
    <string name="text_no_assignments">No assignments</string>
    <string name="text_login_help">Can\'t log in?  Make sure you\'re using the same username and password you use for the Aspen website. The app currently only supports Chicago Public Schools</string>
    <string name="button_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="extra_cookie_keys">keys</string>
    <string name="extra_cookie_values">values</string>
    <string name="extra_class_id">class id</string>
    <string name="extra_token">token</string>
    <string name="extra_term">term</string>
    <string name="extra_class_description">description</string>
    <string name="extra_main_activity_relaunch">relaunch</string>
    <string name="extra_teacher">teacher</string>
    <string name="extra_schedule">schedule</string>
    <string name="extra_clssrm">clssrm</string>
    <string name="extra_grade">grade</string>
    <string name="action_logout">logout</string>
    <string name="action_refresh">refresh</string>
    <string name="action_swap_assignment_view">toggle view</string>
    <string name="action_switch_student">switch student</string>
    <string name="credentials_file_key">com.aspengrades.USERNAME_PASSWORD</string>
    <string name="fav_term_file_key">com.aspengrades.FAV_TERM</string>
    <string name="saved_username_key">username</string>
    <string name="saved_password_key">password</string>
    <string name="saved_name_key">name</string>
    <string name="saved_is_parent_key">parent</string>
    <string name="saved_fav_term_key">term</string>
    <string name="alert_title_session_expired">Session expired</string>
    <string name="alert_text_session_expired">"Your Aspen session has expired. Reload classes?"</string>
    <string name="description_logo">logo</string>
</resources>
