<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_switch_student"
        android:icon="@drawable/sharp_perm_identity_white_48dp"
        android:title="@string/action_switch_student"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_refresh_white_48dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_exit_to_app_white_48dp"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom"/>

</menu>